--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,15 +4,26 @@
  */
 
 .heroBanner {
-  padding: 4rem 0;
+  padding: 8rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
 }
 
+.lauchingSvg {
+  height: 400px;
+  width: 400px;
+  margin: 0 auto;
+}
+
 @media screen and (max-width: 966px) {
   .heroBanner {
-    padding: 2rem;
+    padding: 4rem;
+  }
+
+  .lauchingSvg {
+    height: 200px;
+    width: 200px;
   }
 }
 
